--- a/app/src/main/res/layout/activity_increase_credit.xml
+++ b/app/src/main/res/layout/activity_increase_credit.xml
@@ -112,6 +112,7 @@
             app:layout_constraintWidth_percent="0.6">
 
             <TextView
+                android:id="@+id/tv_calculated"
                 style="@style/text_green"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
