--- a/app/src/main/res/layout/card_archive.xml
+++ b/app/src/main/res/layout/card_archive.xml
@@ -232,7 +232,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/border_fifteen_radius_green"
             android:drawableStart="@drawable/ic_refresh_dark_blue"
-            android:text="@string/request"
+            android:text="@string/cost"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintWidth_percent="0.5" />
